objects/Migration_Rule__c.object
<CustomObject>
    <fields>
        <fullName>Callout_Chunk_Size__c</fullName>
        <label>Callout Chunk Size</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Is_self_related__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is self related</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_source_master_of_target__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is source master of target</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Source_Object_Name_Field__c</fullName>
        <defaultValue>&apos;Name&apos;</defaultValue>
        <label>Source Object Name Field</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Object_Reference_to_Target__c</fullName>
        <label>Source Object Reference to Target</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Object__c</fullName>
        <label>Source Object</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Object_Name_Field__c</fullName>
        <label>Target Object Name Field</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Object__c</fullName>
        <label>Target Object</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Record_Type__c</fullName>
        <defaultValue>&apos;Default&apos;</defaultValue>
        <label>Target Record Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Migration Rule</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Callout_Chunk_Size__c</columns>
        <columns>Source_Object__c</columns>
        <columns>Target_Object__c</columns>
        <columns>Is_self_related__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MR-{000000}</displayFormat>
        <label>Migration Rule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Migration Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>